<resources>
    <string name="app_name">android_</string>
    <string name="txtsortie">txtSortie</string>
    <string name="etat">EN MOUVEMENT</string>
    <string name="temperature">Chaleur Corporelle</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="bracelet_connect">Bracelet connecté</string>
    <string name="port">PORT</string>
    <string name="entrer">Entrer</string>
    <string name="ex_1234">ex:1234</string>
    <string name="ex_192_168">ex:192.168...</string>
    <string name="actualiser">Actualiser</string>
    <string name="bienvenue">MENU</string>
    <string name="home">home</string>
    <string name="modifier">modifier</string>
    <string name="parametres">parametres</string>
    <string name="modifier_titre">MODIFIER</string>
    <string name="retour">Retour</string>
    <string name="param_tres">Paramètres</string>
    <string name="title_activity_modifier">ModifierActivity</string>
    <string name="title_activity_parametre">ParametreActivity</string>
    <string name="confirmer">Confirmer</string>
    <string name="exemple_37">exemple:37</string>
    <string name="btn_parametres">Parametres</string>
    <string name="la_limite_de_temp_rature_est">La limite de température est de</string>
    <string name="c">°C</string>
    <string name="fr_quence_cardiaque">Fréquence cardiaque</string>
</resources>