<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity">

    <TextView
        android:id="@+id/textView_titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bracelet_connect"
        android:gravity="center"
        android:textSize="45sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"/>

    <TextView
        android:textColor="@color/black"
        android:id="@+id/textView_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="25dp"

        android:gravity="center"
        android:text="IP"
        android:textSize="23dp" />

    <EditText
        android:id="@+id/input_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ex_192_168"
        android:gravity="center"
        android:inputType="text" />

    <TextView
        android:textColor="@color/black"
        android:textSize="23sp"
        android:id="@+id/textView_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/port"
        android:gravity="center"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="25dp"/>

    <EditText
        android:id="@+id/input_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:gravity="center"
        android:hint="@string/ex_1234" />

    <Button

        android:id="@+id/button_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:layout_marginLeft="135dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="125dp"
        android:background="@color/black"
        android:text="@string/entrer"

        android:textColor="@color/white" />
</LinearLayout>